--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -77,6 +77,7 @@
     <Compile Include="MainWindow.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="config.xml" />
     <Content Include="Images\Game.ico" />
     <Content Include="Images\GameThumbnail.png">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
