--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprite.cs" />
+    <Compile Include="SpriteDrawer.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
