--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -72,7 +72,10 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GameScreen.cs" />
     <Compile Include="KeyHandler.cs" />
+    <Compile Include="MenuComponent1.cs" />
+    <Compile Include="PopUpDialogueScreen.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="MainWindow.cs" />
