--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -62,14 +62,17 @@
     <Compile Include="Ability.cs" />
     <Compile Include="Actor.cs" />
     <Compile Include="Buff.cs" />
+    <Compile Include="Button.cs" />
     <Compile Include="Creature.cs" />
     <Compile Include="LCGRandom.cs" />
     <Compile Include="LevelingSystem.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Slider.cs" />
     <Compile Include="Sprite.cs" />
     <Compile Include="SpriteDrawer.cs" />
     <Compile Include="Stats.cs" />
+    <Compile Include="TextField.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
