--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -59,24 +59,24 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ability.cs" />
-    <Compile Include="Actor.cs" />
-    <Compile Include="Buff.cs" />
-    <Compile Include="Button.cs" />
-    <Compile Include="Creature.cs" />
-    <Compile Include="IGuiItem.cs" />
+    <Compile Include="Actor_Values\Ability.cs" />
+    <Compile Include="Actors\Actor.cs" />
+    <Compile Include="Actor_Values\Buff.cs" />
+    <Compile Include="GUI Items\Button.cs" />
+    <Compile Include="Drawing\Camera.cs" />
+    <Compile Include="Actors\Creature.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="LCGRandom.cs" />
-    <Compile Include="LevelingSystem.cs" />
-    <Compile Include="IMenu.cs" />
+    <Compile Include="Actor_Values\LevelingSystem.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="ProgramonMenu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Slider.cs" />
-    <Compile Include="Sprite.cs" />
-    <Compile Include="SpriteDrawer.cs" />
-    <Compile Include="Stats.cs" />
-    <Compile Include="TextField.cs" />
+    <Compile Include="GUI Items\Slider.cs" />
+    <Compile Include="Drawing\Sprite.cs" />
+    <Compile Include="Drawing\SpriteDrawer.cs" />
+    <Compile Include="Actor_Values\Stats.cs" />
+    <Compile Include="GUI Items\TextField.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
