--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -59,9 +59,11 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actors\Player.cs" />
     <Compile Include="Actor_Values\Ability.cs" />
     <Compile Include="Actors\Actor.cs" />
     <Compile Include="Actor_Values\Buff.cs" />
+    <Compile Include="Animation.cs" />
     <Compile Include="GUI Items\Button.cs" />
     <Compile Include="Drawing\Camera.cs" />
     <Compile Include="Actors\Creature.cs" />
