--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -96,6 +96,7 @@
     </Content>
     <Content Include="Maps\CameraTestMap_Big.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
