--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Actor_Values\Ability.cs" />
     <Compile Include="Actors\Actor.cs" />
     <Compile Include="Actor_Values\Buff.cs" />
+    <Compile Include="AI.cs" />
     <Compile Include="Animation.cs" />
     <Compile Include="GUI Items\Button.cs" />
     <Compile Include="Drawing\Camera.cs" />
