--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -66,6 +66,11 @@
     <Compile Include="AI.cs" />
     <Compile Include="Animation.cs" />
     <Compile Include="BattleMechanics.cs" />
+    <Compile Include="Battle\AbilityBox.cs" />
+    <Compile Include="Battle\BattleBox.cs" />
+    <Compile Include="Battle\BattleState.cs" />
+    <Compile Include="Battle\ProgramonStatusBox.cs" />
+    <Compile Include="Battle\SelectionBox.cs" />
     <Compile Include="GUI Items\Button.cs" />
     <Compile Include="Drawing\Camera.cs" />
     <Compile Include="Actors\Creature.cs" />
