--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -76,6 +76,7 @@
     <Compile Include="GUI Items\Button.cs" />
     <Compile Include="Drawing\Camera.cs" />
     <Compile Include="Actors\Creature.cs" />
+    <Compile Include="GUI Items\DialogueBox.cs" />
     <Compile Include="Interfaces.cs" />
     <Compile Include="LCGRandom.cs" />
     <Compile Include="Actor_Values\LevelingSystem.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Drawing\SpriteDrawer.cs" />
     <Compile Include="Actor_Values\Stats.cs" />
     <Compile Include="GUI Items\TextField.cs" />
+    <Compile Include="StringExtentions.cs" />
     <Compile Include="Transform.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
