--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -70,6 +70,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Net" />
+    <Reference Include="XnaGuiItems">
+      <HintPath>..\..\..\..\..\..\Visual Studio 2013\Projects\XnaGuiItems\XnaGuiItems\obj\x86\Debug\XnaGuiItems.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BattleBox.cs" />
