Added changes to map
map supports the output of map editor

--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -100,6 +100,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="XnaGuiItems.dll" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ProgramonEngine\ProgramonEngine.csproj">
