Added Inventory as property to player
-Added Inventory as property to player
- Added InventoryMenu to display InventoryItems
- Added when user presses: "I" it goes to inventory

--- a/Project/Programon/Programon/Programon/Programon.csproj
+++ b/Project/Programon/Programon/Programon/Programon.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Menus\Inventory.cs" />
+    <Compile Include="Menus\InventoryMenu.cs" />
     <Compile Include="XmlLoader.cs" />
     <Compile Include="GameState.cs" />
     <Compile Include="KeyHandler.cs" />
