Added temporary npc
-Added temporary npc that can move random in a specified location

--- a/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
+++ b/Project/Programon/ProgramonEngine/ProgramonEngine.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\Boss.cs" />
+    <Compile Include="Actors\NPC.cs" />
     <Compile Include="Actors\Player.cs" />
     <Compile Include="Actor_Values\Ability.cs" />
     <Compile Include="Actors\Actor.cs" />
