--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ ClientBin/
 *.[Pp]ublish.xml
 *.pfx
 *.publishsettings
+Thumbs.db
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -133,3 +134,4 @@ UpgradeLog*.htm
 # SQL Server files
 App_Data/*.mdf
 App_Data/*.ldf
+*.suo
